fix bug overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,9 @@
 
 html, body {
   max-width: 100%;
+}
+
+body{
   overflow-x: hidden
 }
 
